--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">PlaiiMob</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">PlaiiMob</string>
@@ -10,4 +9,5 @@
     <string name="action_map">Show Map</string>
     <string name="action_compass">Show Compass</string>
     <string name="title_choose_cmotype">Who are you?</string>
+    <string name="action_exit">Exit</string>
 </resources>
